name:                logging-effect-google
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dp-cylme/logging-effect-google#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           Copyright: (c) 2016 Danil Petrov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Log.Handler
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2
                     , gogol-logging >= 0.1
                     , logging-effect >= 1.1
                     , exceptions >= 0.8
                     , gogol >= 0.1
                     , retry >= 0.7
                     , lens >= 4.14
  default-language:    Haskell2010

test-suite logging-effect-google-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logging-effect-google
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/logging-effect-google
